# mouse-mentor

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  README.md  REFRESH_UI.md  eslint.config.js  index.html  landing.html  package-lock.json  package.json  render.yaml  vite.config.js
.github/workflows/: ci.yml
backend/: .env.example  ai.py  auth.py  billing.py  database.py  deps.py  dining_alerts_store.py  dining_availability.py  dining_email.py  dining_poll.py  dining_recommendations.py  dining_restaurants_list.py  dining_suggest_times.py  env.py  itinerary_export.py  lightning_lane_guide.py  main.py  models.py  pyproject.toml  rate_limit.py  requirements-dev.txt  requirements.txt  saved_trips.db  schemas.py  store.py  trip_tips.py  wait_times.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_main.py  test_wait_times.py
coverage/: App.jsx.html  MickeyIcon.jsx.html  coverage-final.json  index.html  lcov.info
coverage/lcov-report/: App.jsx.html  MickeyIcon.jsx.html  index.html
coverage/src/: App.jsx.html  MentorWandIcon.jsx.html  MickeyIcon.jsx.html  diningWindow.js.html  index.html  tripFromApi.js.html  tripInfo.js.html
src/: App.css  App.jsx  App.test.jsx  MentorWandIcon.jsx  MickeyIcon.jsx  MickeyIcon.test.jsx  diningWindow.js  index.css  main.jsx  tripFromApi.js  tripInfo.js
src/components/: AuthModal.css  AuthModal.jsx  DashboardHome.jsx  DiningAlerts.jsx  DiningPage.jsx  GetToKnowYou.css  GetToKnowYou.jsx  ItineraryPage.jsx  LightningLaneGuidePage.jsx  MickeyEarAvatar.jsx  PaywallModal.css  PaywallModal.jsx  (+4 more)
(+65 files in other folders)
